download results file

--- a/generator/templates/generator/upload.html
+++ b/generator/templates/generator/upload.html
@@ -9,3 +9,11 @@
   {% endif %}
 
   <p><a href="#">Return to home</a></p>
+  
+  {%if result_path%}
+  <form method="get" enctype="multipart/form-data" action="{%url 'generator:download'%}">
+    {% csrf_token %}
+    <button type="submit">download</button>
+  </form>
+
+  {%endif%}
